--- a/Cut a grid.ipynb
+++ b/Cut a grid.ipynb
@@ -30,7 +30,7 @@
     "# Pseudo\n",
     "\n",
     "    This graph can be approached as a directed gaph.\n",
-    "    For each edge in microgrid_edges, create 2 directed edges.\n",
+    "    For each undirected edge in microgrid_edges (alternating current), create 2 directed edges.\n",
     "    Each has weight equal to tail of directed edge.\n",
     "    \n",
     "    Search for a Minimum Spanning Arborescence (MSA) on this graph.\n",
