Update Cut a grid _ second attmpt.ipynb

--- a/Cut a grid _ second attmpt.ipynb
+++ b/Cut a grid _ second attmpt.ipynb
@@ -45,7 +45,7 @@
     "    This will results in a small number of disconnected clusters which satisfy the power constraint,\n",
     "    and which contain many nodes of the graph.\n",
     "    \n",
-    "    We now have to verify if this solution is optimal or not.\n",
+    "    I verify if this solution is optimal or not.\n",
     "    "
    ]
   },
